src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Operating_Name_Arabic__c</fullName>
        <label>Operating Name (Arabic)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Customer_Id__c</fullName>
        <label>Oracle Customer Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Customer_Number__c</fullName>
        <label>Oracle Customer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Integration_Error_Message__c</fullName>
        <label>Oracle Integration Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Integration_Status__c</fullName>
        <label>Oracle-Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Integration - Oracle</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oracle_Party_Number__c</fullName>
        <description>Created for DDA Integration</description>
        <label>Oracle Party Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outsourced_Employee__c</fullName>
        <label>Outsourced Employee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overwrite_Area_Rooms__c</fullName>
        <label>Overwrite(Area/Rooms)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overwrite_Unit_type__c</fullName>
        <label>Overwrite Unit type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overwrite_Visa_Other__c</fullName>
        <label>Overwrite Visa(Other)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overwrite_Visa_Type__c</fullName>
        <label>Overwrite Visa Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Box_Number__c</fullName>
        <label>PO Box Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Status__c</fullName>
        <label>PSA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paid_Up_Capital__c</fullName>
        <label>Paid Up Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Company_Name__c</fullName>
        <description>Parent company name which is used to display on customer registration form.</description>
        <label>Parent Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Company_Registration_Number__c</fullName>
        <description>Parent company registration number, displayed on customer onboarding form.</description>
        <label>Parent Company Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking_Eligibility__c</fullName>
        <label>Parking Eligibility</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_for_Directory__c</fullName>
        <label>Phone for Directory</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Physical_Mailing_Address__c</fullName>
        <label>Physical Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Descriptions__c</fullName>
        <label>Plan Descriptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plot_Type__c</fullName>
        <label>Plot Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Month_Customer_Deposit_Opening__c</fullName>
        <label>Previous Month Customer Deposit(Opening)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Land</fullName>
                </value>
                <value>
                    <fullName>Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Legal_Form_of_Business__c</fullName>
        <label>Proposed Legal Form of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FZ-LLC Natural Person</fullName>
                </value>
                <value>
                    <fullName>FZ-LLC Corporate</fullName>
                </value>
                <value>
                    <fullName>Branch of Foreign Company</fullName>
                </value>
                <value>
                    <fullName>Branch of UAE Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provisional_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provisional Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provisional_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provisional Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R12_Bounced_cheque_count__c</fullName>
        <label>R12 Bounced cheque count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIC__c</fullName>
        <label>RIC</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ramadan_Permit_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ramadan Permit Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receivable_Account_Integration_Status__c</fullName>
        <label>Receivable Account Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Registration_No__c</fullName>
        <label>Registration No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Company_Type__c</fullName>
        <label>Related Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Intercompany</fullName>
                </value>
                <value>
                    <fullName>Intracompany</fullName>
                </value>
                <value>
                    <fullName>Other related parties</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_To_Reflect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required To Reflect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residence_visas_Issued__c</fullName>
        <label>Residence visas Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retail_Services_Classifications__c</fullName>
        <label>Retail Services Classifications</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RnL_Sanctions__c</fullName>
        <label>RnL Sanctions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SME_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SME Company ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SQL_Integration_Status__c</fullName>
        <label>SQL-Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_com_Customer__c</fullName>
        <label>Salesforce.com Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sanctions_Notes__c</fullName>
        <label>Sanctions (Notes)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sanctions__c</fullName>
        <label>Sanctions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Mobile__c</fullName>
        <label>Secondary Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sectors__c</fullName>
        <label>Sectors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Check_Submitter_Comments__c</fullName>
        <label>Security Check Submitter Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Security_Clearance_Date__c</fullName>
        <label>Security Clearance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Security_Clearance_Request_Count__c</fullName>
        <label>Security Clearance Request Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Clearance_Request_Date__c</fullName>
        <label>Security Clearance Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Security_Clearance_Status__c</fullName>
        <label>Security Clearance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Clearance_Submitter_Comment__c</fullName>
        <label>Security Clearance Submitter Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Security_Request_Date_Approval_Date__c</fullName>
        <label>Security Request Date-Approval Date</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment_Activity__c</fullName>
        <label>Segment Activity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Luxury</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <isActive>false</isActive>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Request_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Request Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_Capital__c</fullName>
        <label>Share Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Share_Value__c</fullName>
        <label>Share Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shareholder_Type__c</fullName>
        <label>Shareholder Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skip_Clearance_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Clearance Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specification__c</fullName>
        <label>Specification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsored_Employees__c</fullName>
        <label>Sponsored Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statutory_Seat_Parent_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to country, displaying on customer on boarding screen.</description>
        <label>Statutory Seat - Parent Company</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts (Statutory Seat - Parent Company)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Statutory_Seat__c</fullName>
        <label>Statutory Seat</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Absconded_In_country__c</fullName>
        <label>Student Absconded (In-country)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Lease_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Lease Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub Lease ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAX_Registration_Number__c</fullName>
        <label>TAX Registration Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Topup_of_6_months__c</fullName>
        <label>Topup of 6 months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_BG_Refund__c</fullName>
        <label>Total BG (Refund)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Customer_Deposit_Refund__c</fullName>
        <label>Total Customer Deposit(Refund)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Leased_Area_DOZ__c</fullName>
        <label>Total Leased Area DOZ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Overdue_Amount__c</fullName>
        <label>Total Overdue Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Paid_Amount__c</fullName>
        <label>Total Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_License_Paid_Date__c</fullName>
        <label>Trade License Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Collected__c</fullName>
        <label>VAT Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT_Consumed__c</fullName>
        <label>VAT Consumed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verticals__c</fullName>
        <label>Verticals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Visa_Setup_Fee_Paid__c</fullName>
        <label>Visit Visa Setup Fee (Paid)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yardi_Account_Id__c</fullName>
        <externalId>true</externalId>
        <label>Yardi Account Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Yardi_Integration_Error_Message__c</fullName>
        <label>Yardi Integration Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Integration_Status__c</fullName>
        <label>Yardi Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Integration - Yardi</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Synced</fullName>
                    <isActive>false</isActive>
                    <label>Synced</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>in5_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>in5 Company ?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>License_c_can_only_accept_number_values</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(License__c)),
NOT(ISNUMBER(License__c))
)</errorConditionFormula>
        <errorDisplayField>License__c</errorDisplayField>
        <errorMessage>You can only enter numbers in the License Number field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VAT_Number_has_to_contain_15_characters</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(VAT__c)),
LEN(VAT__c)  &lt;&gt; 15
)</errorConditionFormula>
        <errorDisplayField>VAT__c</errorDisplayField>
        <errorMessage>VAT Number has to be 15 characters long</errorMessage>
    </validationRules>
</CustomObject>